# proyecto_python

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
advance_level/laboratory15/: domain.py  presenters.py  repositories.py  usecases.py
advance_level/laboratory15/tests/: test_laboratory15.py
advance_level/laboratory16/.github/workflows/: ci.yml
advance_level/laboratory16/app/: main.py
advance_level/laboratory16/tests/: test_main.py
advance_level/laboratory17/app/: orders17.json  orders_cli.py  orders_mock.py
fundamental_level/module1/: data1.json  exercises1.py  laboratory1.py
fundamental_level/module2/: exercises2.py  laboratory2.py
fundamental_level/module3/: exercises3.py  laboratory3.py
fundamental_level/module4/: exercises4.py  laboratory4.py
fundamental_level/module5/: exercises5.py  laboratory5.py
fundamental_level/module6/: laboratory6.py
intermediate_level/: data.csv  laboratory10.py  laboratory11.py  laboratory12.py  laboratory13.py  laboratory7.py  laboratory8.py  laboratory9.py  model.joblib
intermediate_level/laboratory14/: adapters.py  domain.py  ports.py  usecases.py
intermediate_level/laboratory14/tests/: test_laboratory14.py
intermediate_level/tests/: test_laboratory12.py  test_laboratory9.py
src/proyecto_python/: main.py
test_data/: date.json  example.txt  metrics.json  sales.csv
